--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <div class="Uno">
 
+
       <!--Comienzo de menú de la parte derecha-->
       <ul>
         <li>
@@ -67,37 +68,85 @@
       <!--Final del menu de la parte derecha -->
 
       <!--Divs de elecciones-->
+      <div class="contenedor-escenas">
 
-      <div class="caixa1"></div>
-      <div class="caixa2"></div>
-      <div class="caixa3"></div>
-      <div class="caixa4"></div>
+        <div class="escenas-iconos">
+          <div class="escenas">
+            <div class="item-escena">
+              <div class="caixa">
+                <div class="escena-trans-efecto"></div>
+              </div>
+              <div class="lineas">
+                <i class="fa fa-circle-thin" aria-hidden="true"></i>
+                <i class="fa fa-bars" aria-hidden="true"></i>
+              </div>
+            </div>
+            <div class="item-escena">
+              <div class="caixa">
+                <div class="escena-trans-efecto"></div>
+              </div>
+              <div class="lineas">
+                <i class="fa fa-circle-thin" aria-hidden="true"></i>
+                <i class="fa fa-bars" aria-hidden="true"></i>
+              </div>
+            </div>
+            <div class="item-escena">
+              <div class="caixa">
+                <div class="escena-trans-efecto"></div>
+              </div>
+              <div class="lineas">
+                <i class="fa fa-circle-thin" aria-hidden="true"></i>
+                <i class="fa fa-bars" aria-hidden="true"></i>
+              </div>
+            </div>
+            <div class="item-escena">
+              <div class="caixa">
+                <div class="escena-trans-efecto"></div>
+              </div>
+              <div class="lineas">
+                <i class="fa fa-circle-thin" aria-hidden="true"></i>
+                <i class="fa fa-bars" aria-hidden="true"></i>
+              </div>
+            </div>
+            <div class="item-escena">
+              <div class="caixa">
+                <div class="escena-trans-efecto"></div>
+              </div>
+              <div class="lineas">
+                <i class="fa fa-circle-thin" aria-hidden="true"></i>
+                <i class="fa fa-bars" aria-hidden="true"></i>
+              </div>
+            </div>
+            <div class="item-escena">
+              <div class="caixa">
+                <div class="escena-trans-efecto"></div>
+              </div>
+              <div class="lineas">
+                <i class="fa fa-bars" aria-hidden="true"></i>
+                <i class="fa fa-circle-thin" aria-hidden="true"></i>
+              </div>
+            </div>
+            <div class="item-escena">
+              <div class="caixa">
+                <div class="escena-trans-efecto"></div>
+              </div>
+              <div class="lineas">
+                <i class="fa fa-circle-thin" aria-hidden="true"></i>
+                <i class="fa fa-bars" aria-hidden="true"></i>
+              </div>
+            </div>
 
-      <!--Divs de elecciones-->
+          </div>
 
-      <!--Comienzo del Menu de 3 lineas-->
-
-      <div class="line1">
-        <i class="fa fa-bars" aria-hidden="true"></i>
-      </div>
-      <div class="line2">
-        <i class="fa fa-bars" aria-hidden="true"></i>
-      </div>
-      <div class="line3">
-        <i class="fa fa-bars" aria-hidden="true"></i>
-      </div>
-      <div class="line4">
-        <i class="fa fa-bars" aria-hidden="true"></i>
-      </div>
-      <ul>
-        <!-- Final del Menu de 3 lineas-->
-
-        <!--Comienzo del boton final para añadir-->
-
-        <div class="semnome">
-          <i class="fa fa-bars" aria-hidden="true"></i>
         </div>
-      </ul>
+        <a href="#">
+          <div class="agregar-escena">
+            <i class="fa fa-plus" aria-hidden="true"></i>
+          </div>
+          <div class="name" data-text="agregarescena">Añadir Escena</div>
+        </a>
+        </li>
+      </div>
     </div>
 
 
@@ -110,43 +159,33 @@
     <div class="Dos">
       <div class="main-top">
 
-        <ul class="top-icons">
-          <li>
-            <a href="#">
-              <div class="icon">
-                <i class="fa fa-tint" aria-hidden="true"></i>
-              </div>
-              <div class="name" data-text="gota"></div>
-            </a>
-          </li>
-
-          <li>
-            <a href="#">
-              <div class="icon">
-                <i class="fa fa-tachometer" aria-hidden="true"></i>
-              </div>
-              <div class="name" data-text="tacometro"></div>
-            </a>
-          </li>
-
-          <li>
-            <a href="#">
-              <div class="icon">
-                <i class="fa fa-commenting" aria-hidden="true"></i>
-              </div>
-              <div class="name" data-text="comentario"></div>
-            </a>
-          </li>
-        </ul>
+        
 
         <div class="foto"></div>
 
       </div>
-      <div class="Tres">Tres</div>
+      <div class="Tres">
+        <div class="reproducir">
+          <div class="reproduccion-a">
+            <div class="rojo"></div>
+          </div>
+          <div class="reproduccion-b">
+            <div class="azul"></div>
+          </div>
+          <div class="reproduccion-c">
+            <div class="verde"></div>
+          </div>
+          <div class="reproduccion-d">
+            <div class="naranja"></div>
+          </div>
+        </div>
 
+      </div>
     </div>
 
-    <!--Final da cx2-->
+  </div>
+
+  <!--Final da cx2-->
 
 
 
