Signed-off-by: Leoris <leorisdanielabarretogarcia@gmail.com>

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <li>
           <a href="#">
             <div class="icon">
-              <i class="fa fa-film" aria-hidden="true"></i>
+              <img src="fotos/photo-video-solid.svg">
             </div>
             <div class="name" data-text="escenas">Escenas</div>
           </a>
@@ -31,7 +31,7 @@
         <li>
           <a href="#">
             <div class="icon">
-              <i class="fa fa-picture-o" aria-hidden="true"></i>
+              <img src="fotos/image-solid.svg">
             </div>
             <div class="name" data-text="fondos">Fondos</div>
           </a>
@@ -40,7 +40,7 @@
         <li>
           <a href="#">
             <div class="icon">
-              <i class="fa fa-paint-brush" aria-hidden="true"></i>
+              <img src="fotos/palette-solid.svg">
             </div>
             <div class="name" data-text="objetos">Objetos</div>
           </a>
@@ -49,7 +49,7 @@
         <li>
           <a href="#">
             <div class="icon">
-              <i class="fa fa-font" aria-hidden="true"></i>
+              <img src="fotos/font-solid.svg">
             </div>
             <div class="name" data-text="texto">Texto</div>
           </a>
@@ -58,7 +58,7 @@
         <li>
           <a href="#">
             <div class="icon">
-              <i class="fa fa-volume-up" aria-hidden="true"></i>
+              <img src="fotos/volume-up-solid.svg">
             </div>
             <div class="name" data-text="sonido">Sonido</div>
           </a>
@@ -74,65 +74,79 @@
           <div class="escenas">
             <div class="item-escena">
               <div class="caixa">
-                <div class="escena-trans-efecto"></div>
+                <div class="escena-trans-efecto">
+                  <img src="fotos/exchange-alt-solid.svg">
+                </div>
               </div>
               <div class="lineas">
                 <i class="fa fa-circle-thin" aria-hidden="true"></i>
-                <i class="fa fa-bars" aria-hidden="true"></i>
+                <img src="fotos/bars-solid.svg">
               </div>
             </div>
             <div class="item-escena">
               <div class="caixa">
-                <div class="escena-trans-efecto"></div>
+                <div class="escena-trans-efecto">
+                  <img src="fotos/exchange-alt-solid.svg">
+                </div>
               </div>
               <div class="lineas">
                 <i class="fa fa-circle-thin" aria-hidden="true"></i>
-                <i class="fa fa-bars" aria-hidden="true"></i>
+                <img src="fotos/bars-solid.svg">
               </div>
             </div>
             <div class="item-escena">
               <div class="caixa">
-                <div class="escena-trans-efecto"></div>
+                <div class="escena-trans-efecto">
+                  <img src="fotos/exchange-alt-solid.svg">
+                </div>
               </div>
               <div class="lineas">
                 <i class="fa fa-circle-thin" aria-hidden="true"></i>
-                <i class="fa fa-bars" aria-hidden="true"></i>
+                <img src="fotos/bars-solid.svg">
               </div>
             </div>
             <div class="item-escena">
               <div class="caixa">
-                <div class="escena-trans-efecto"></div>
+                <div class="escena-trans-efecto">
+                  <img src="fotos/exchange-alt-solid.svg">
+                </div>
               </div>
               <div class="lineas">
                 <i class="fa fa-circle-thin" aria-hidden="true"></i>
-                <i class="fa fa-bars" aria-hidden="true"></i>
+                <img src="fotos/bars-solid.svg">
               </div>
             </div>
             <div class="item-escena">
               <div class="caixa">
-                <div class="escena-trans-efecto"></div>
+                <div class="escena-trans-efecto">
+                  <img src="fotos/exchange-alt-solid.svg">
+                </div>
               </div>
               <div class="lineas">
                 <i class="fa fa-circle-thin" aria-hidden="true"></i>
-                <i class="fa fa-bars" aria-hidden="true"></i>
+                <img src="fotos/bars-solid.svg">
               </div>
             </div>
             <div class="item-escena">
               <div class="caixa">
-                <div class="escena-trans-efecto"></div>
+                <div class="escena-trans-efecto">
+                  <img src="fotos/exchange-alt-solid.svg">
+                </div>
               </div>
               <div class="lineas">
                 <i class="fa fa-bars" aria-hidden="true"></i>
-                <i class="fa fa-circle-thin" aria-hidden="true"></i>
+                <img src="fotos/bars-solid.svg">
               </div>
             </div>
             <div class="item-escena">
               <div class="caixa">
-                <div class="escena-trans-efecto"></div>
+                <div class="escena-trans-efecto">
+                  <img src="fotos/exchange-alt-solid.svg">
+                </div>
               </div>
               <div class="lineas">
                 <i class="fa fa-circle-thin" aria-hidden="true"></i>
-                <i class="fa fa-bars" aria-hidden="true"></i>
+                <img src="fotos/bars-solid.svg">
               </div>
             </div>
 
@@ -141,7 +155,7 @@
         </div>
         <a href="#">
           <div class="agregar-escena">
-            <i class="fa fa-plus" aria-hidden="true"></i>
+            <img src="fotos/font-solid.svg">
           </div>
           <div class="name" data-text="agregarescena">Añadir Escena</div>
         </a>
@@ -158,34 +172,42 @@
 
     <div class="Dos">
       <div class="main-top">
-
-        
-
         <div class="foto"></div>
-
+        <div class="menu-play"></div>
       </div>
       <div class="Tres">
         <div class="reproducir">
           <div class="reproduccion-a">
+            <div class="microfono"><img src="fotos/microphone-solid.svg"></div>
+            <div class="sonido"><img src="fotos/volume-mute-solid.svg"></div>
             <div class="rojo"></div>
           </div>
           <div class="reproduccion-b">
+            <div class="ojo"><img src="fotos/eye-slash-solid.svg"></div>
+            <div class="sonido"><img src="fotos/volume-mute-solid.svg"></div>
+            <i class="fa fa-circle" aria-hidden="true"></i>
             <div class="azul"></div>
           </div>
           <div class="reproduccion-c">
+            <div class="ojo"><img src="fotos/eye-slash-solid.svg"></div>
+            <div class="sonido"><img src="fotos/volume-mute-solid.svg"></div>
+            <div class="circulo-a"></div>
             <div class="verde"></div>
+
           </div>
           <div class="reproduccion-d">
+            <div class="ojo"><img src="fotos/eye-slash-solid.svg"></div>
+            <div class="sonido"><img src="fotos/volume-mute-solid.svg"></div>
+            <i class="fa fa-circle" aria-hidden="true"></i>
             <div class="naranja"></div>
           </div>
         </div>
-
       </div>
     </div>
 
-  </div>
 
-  <!--Final da cx2-->
+
+    <!--Final da cx2-->
 
 
 
