Signed-off-by: Leoris <leorisdanielabarretogarcia@gmail.com>

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="escenas-iconos">
           <div class="escenas">
             <div class="item-escena">
-              <div class="caixa">
+              <div class="caixa-a">
                 <div class="escena-trans-efecto">
                   <img src="fotos/exchange-alt-solid.svg">
                 </div>
@@ -84,7 +84,7 @@
               </div>
             </div>
             <div class="item-escena">
-              <div class="caixa">
+              <div class="caixa-b">
                 <div class="escena-trans-efecto">
                   <img src="fotos/exchange-alt-solid.svg">
                 </div>
@@ -95,7 +95,7 @@
               </div>
             </div>
             <div class="item-escena">
-              <div class="caixa">
+              <div class="caixa-c">
                 <div class="escena-trans-efecto">
                   <img src="fotos/exchange-alt-solid.svg">
                 </div>
@@ -106,7 +106,7 @@
               </div>
             </div>
             <div class="item-escena">
-              <div class="caixa">
+              <div class="caixa-d">
                 <div class="escena-trans-efecto">
                   <img src="fotos/exchange-alt-solid.svg">
                 </div>
@@ -117,7 +117,7 @@
               </div>
             </div>
             <div class="item-escena">
-              <div class="caixa">
+              <div class="caixa-e">
                 <div class="escena-trans-efecto">
                   <img src="fotos/exchange-alt-solid.svg">
                 </div>
@@ -128,7 +128,7 @@
               </div>
             </div>
             <div class="item-escena">
-              <div class="caixa">
+              <div class="caixa-f">
                 <div class="escena-trans-efecto">
                   <img src="fotos/exchange-alt-solid.svg">
                 </div>
@@ -139,7 +139,7 @@
               </div>
             </div>
             <div class="item-escena">
-              <div class="caixa">
+              <div class="caixa-g">
                 <div class="escena-trans-efecto">
                   <img src="fotos/exchange-alt-solid.svg">
                 </div>
