--- a/index.html
+++ b/index.html
@@ -69,7 +69,6 @@
 
       <!--Divs de elecciones-->
       <div class="contenedor-escenas">
-
         <div class="escenas-iconos">
           <div class="escenas">
             <div class="item-escena">
@@ -80,7 +79,7 @@
               </div>
               <div class="lineas">
                 <i class="fa fa-circle-thin" aria-hidden="true"></i>
-                <img src="fotos/bars-solid.svg">
+                <i class="fa fa-bars" aria-hidden="true"></i>
               </div>
             </div>
             <div class="item-escena">
@@ -91,7 +90,7 @@
               </div>
               <div class="lineas">
                 <i class="fa fa-circle-thin" aria-hidden="true"></i>
-                <img src="fotos/bars-solid.svg">
+                <i class="fa fa-bars" aria-hidden="true"></i>
               </div>
             </div>
             <div class="item-escena">
@@ -102,7 +101,7 @@
               </div>
               <div class="lineas">
                 <i class="fa fa-circle-thin" aria-hidden="true"></i>
-                <img src="fotos/bars-solid.svg">
+                <i class="fa fa-bars" aria-hidden="true"></i>
               </div>
             </div>
             <div class="item-escena">
@@ -113,7 +112,7 @@
               </div>
               <div class="lineas">
                 <i class="fa fa-circle-thin" aria-hidden="true"></i>
-                <img src="fotos/bars-solid.svg">
+                <i class="fa fa-bars" aria-hidden="true"></i>
               </div>
             </div>
             <div class="item-escena">
@@ -124,7 +123,7 @@
               </div>
               <div class="lineas">
                 <i class="fa fa-circle-thin" aria-hidden="true"></i>
-                <img src="fotos/bars-solid.svg">
+                <i class="fa fa-bars" aria-hidden="true"></i>
               </div>
             </div>
             <div class="item-escena">
@@ -134,8 +133,8 @@
                 </div>
               </div>
               <div class="lineas">
+                <i class="fa fa-circle-thin" aria-hidden="true"></i>
                 <i class="fa fa-bars" aria-hidden="true"></i>
-                <img src="fotos/bars-solid.svg">
               </div>
             </div>
             <div class="item-escena">
@@ -146,7 +145,7 @@
               </div>
               <div class="lineas">
                 <i class="fa fa-circle-thin" aria-hidden="true"></i>
-                <img src="fotos/bars-solid.svg">
+                <i class="fa fa-bars" aria-hidden="true"></i>
               </div>
             </div>
 
@@ -173,32 +172,24 @@
     <div class="Dos">
       <div class="main-top">
         <div class="foto"></div>
-        <div class="menu-play"></div>
+        <!--<div class="menu-play"></div>-->
       </div>
       <div class="Tres">
         <div class="reproducir">
           <div class="reproduccion-a">
-            <div class="microfono"><img src="fotos/microphone-solid.svg"></div>
-            <div class="sonido"><img src="fotos/volume-mute-solid.svg"></div>
             <div class="rojo"></div>
           </div>
           <div class="reproduccion-b">
-            <div class="ojo"><img src="fotos/eye-slash-solid.svg"></div>
-            <div class="sonido"><img src="fotos/volume-mute-solid.svg"></div>
-            <i class="fa fa-circle" aria-hidden="true"></i>
+
             <div class="azul"></div>
           </div>
           <div class="reproduccion-c">
-            <div class="ojo"><img src="fotos/eye-slash-solid.svg"></div>
-            <div class="sonido"><img src="fotos/volume-mute-solid.svg"></div>
-            <div class="circulo-a"></div>
+
             <div class="verde"></div>
 
           </div>
           <div class="reproduccion-d">
-            <div class="ojo"><img src="fotos/eye-slash-solid.svg"></div>
-            <div class="sonido"><img src="fotos/volume-mute-solid.svg"></div>
-            <i class="fa fa-circle" aria-hidden="true"></i>
+
             <div class="naranja"></div>
           </div>
         </div>
