--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
             <div class="item-escena">
               <div class="caixa-a">
                 <div class="escena-trans-efecto">
-                  <img src="fotos/exchange-alt-solid.svg">
+                  <div><i class="fa fa-long-arrow-left" aria-hidden="true"></i></div>
+                  <div><i class="fa fa-long-arrow-right" aria-hidden="true"></i></div>
                 </div>
               </div>
               <div class="lineas">
@@ -85,7 +86,8 @@
             <div class="item-escena">
               <div class="caixa-b">
                 <div class="escena-trans-efecto">
-                  <img src="fotos/exchange-alt-solid.svg">
+                  <div><i class="fa fa-long-arrow-left" aria-hidden="true"></i></div>
+                  <div><i class="fa fa-long-arrow-right" aria-hidden="true"></i></div>
                 </div>
               </div>
               <div class="lineas">
@@ -96,7 +98,8 @@
             <div class="item-escena">
               <div class="caixa-c">
                 <div class="escena-trans-efecto">
-                  <img src="fotos/exchange-alt-solid.svg">
+                  <div><i class="fa fa-long-arrow-left" aria-hidden="true"></i></div>
+                  <div><i class="fa fa-long-arrow-right" aria-hidden="true"></i></div>
                 </div>
               </div>
               <div class="lineas">
@@ -107,7 +110,8 @@
             <div class="item-escena">
               <div class="caixa-d">
                 <div class="escena-trans-efecto">
-                  <img src="fotos/exchange-alt-solid.svg">
+                  <div><i class="fa fa-long-arrow-left" aria-hidden="true"></i></div>
+                  <div><i class="fa fa-long-arrow-right" aria-hidden="true"></i></div>
                 </div>
               </div>
               <div class="lineas">
@@ -118,7 +122,8 @@
             <div class="item-escena">
               <div class="caixa-e">
                 <div class="escena-trans-efecto">
-                  <img src="fotos/exchange-alt-solid.svg">
+                  <div><i class="fa fa-long-arrow-left" aria-hidden="true"></i></div>
+                  <div><i class="fa fa-long-arrow-right" aria-hidden="true"></i></div>
                 </div>
               </div>
               <div class="lineas">
@@ -129,7 +134,8 @@
             <div class="item-escena">
               <div class="caixa-f">
                 <div class="escena-trans-efecto">
-                  <img src="fotos/exchange-alt-solid.svg">
+                  <div><i class="fa fa-long-arrow-left" aria-hidden="true"></i></div>
+                  <div><i class="fa fa-long-arrow-right" aria-hidden="true"></i></div>
                 </div>
               </div>
               <div class="lineas">
@@ -140,7 +146,8 @@
             <div class="item-escena">
               <div class="caixa-g">
                 <div class="escena-trans-efecto">
-                  <img src="fotos/exchange-alt-solid.svg">
+                  <div><i class="fa fa-long-arrow-left" aria-hidden="true"></i></div>
+                  <div><i class="fa fa-long-arrow-right" aria-hidden="true"></i></div>
                 </div>
               </div>
               <div class="lineas">
@@ -152,12 +159,13 @@
           </div>
 
         </div>
-        <a href="#">
-          <div class="agregar-escena">
-            <img src="fotos/font-solid.svg">
-          </div>
-          <div class="name" data-text="agregarescena">Añadir Escena</div>
-        </a>
+
+        <div class="agregar-escena">
+          <i class="fa fa-plus" aria-hidden="true"></i>
+          <div>Añadir Escena</div>
+        </div>
+        
+
         </li>
       </div>
     </div>
