--- a/index.html
+++ b/index.html
@@ -179,7 +179,9 @@
 
     <div class="Dos">
       <div class="main-top">
-        <div class="foto"></div>
+        <div class="foto">
+          <img src="./fotos/desk.jpg" style="object-fit: contain;">
+        </div>
         <!--<div class="menu-play"></div>-->
       </div>
       <div class="Tres">
