--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
       </div>
       <div class="Tres">
         <div class="reproducir">
-          <div class="reproduccion-a">
+          <div class="reproduccion-a" style="border-radius: 30px 0 0 0;">
             <div class="rojo"></div>
           </div>
           <div class="reproduccion-b">
