--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
           <i class="fa fa-plus" aria-hidden="true"></i>
           <div>Añadir Escena</div>
         </div>
-        
+
 
         </li>
       </div>
@@ -187,19 +187,32 @@
       <div class="Tres">
         <div class="reproducir">
           <div class="reproduccion-a" style="border-radius: 30px 0 0 0;">
+            <span class="timeline-icons">
+              <i class="fa fa-microphone" aria-hidden="true" style="margin-left: 20px;"></i>
+              <span class="circulo-color"></span>
+            </span>
             <div class="rojo"></div>
           </div>
           <div class="reproduccion-b">
-
+            <span class="timeline-icons">
+              <span class="circulo-icon"></span>
+              <span class="circulo-color" style="background-color: #1482ff;"></span>
+            </span>
             <div class="azul"></div>
           </div>
           <div class="reproduccion-c">
-
+            <span class="timeline-icons">
+              <span class="circulo-icon" ></span>
+              <span class="circulo-color" style="background-color: #48c295;"></span>
+            </span>
             <div class="verde"></div>
 
           </div>
           <div class="reproduccion-d">
-
+            <span class="timeline-icons">
+              <span class="circulo-icon"></span>
+              <span class="circulo-color" style="background-color: #e14848;"></span>
+            </span>
             <div class="naranja"></div>
           </div>
         </div>
