--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -4,29 +4,48 @@
 <head>
   <meta charset="utf-8">
   <title>dashboard</title>
-  <link rel="stylesheet" type="text/css" href="style.css"> 
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
+
 <body>
   <div class="row">
     <div class="uno">
       <div class="logo"></div>
-      <div class="texto-logo"><h2>Logo</h2></div>
+      <div class="texto-logo">
+        <h2>Logo</h2>
+      </div>
       <div class="nuevo-proyecto">Crear Nuevo Proyecto</div>
-      <div class="manager"><h2>Asset Manager<h2></div>
+      <div class="manager">
+        <h2>Asset Manager<h2>
+      </div>
 
     </div>
     <div class="dos">
       <div class="menu">
         <ul>
-         <li><a href="#"><div class="fondos">Fondos</a></div></li>
-          <li><a href="#"><div class="objetos">Objetos</a></div></li>
-            <li><a href="#"><div class="audio">Audio</a></div></li>
-     </ul>
+          <li><a href="#">
+              <div class="fondos">Fondos
+            </a>
+      </div>
+      </li>
+      <li><a href="#">
+          <div class="objetos">Objetos
+        </a>
     </div>
-    <div class="anadir-nuevo"><h2>Añadir Nuevo</h2></div>
-      <div class="div-fotos"></div>
-      
-    </div>
+    </li>
+    <li><a href="#">
+        <div class="audio">Audio
+      </a>
+  </div>
+  </li>
+  </ul>
+  </div>
+  <div class="anadir-nuevo">
+    <h2>Añadir Nuevo</h2>
+  </div>
+  <div class="div-fotos"></div>
+
+  </div>
 
 
 
@@ -36,8 +55,7 @@
 
 
 
-    </div>
+  </div>
 </body>
 
 </html
-
