comienzo de fondos

--- a/index.html
+++ b/index.html
@@ -172,8 +172,35 @@
           <div>Añadir Escena</div>
         </div>
 
-        <div>
-          Hola Joe
+        <div class="contenedor-opciones">
+          <div class="input"></div>
+          <div class="colores">
+            <div class="negro" ></div>
+            <div class="blanco con-borda"></div>
+            <div class="color azul-claro con-borda"></div>
+            <div class="color verde-claro"></div>
+            <div class="color amarillo con-borda"></div>
+            <div class="color anaranjado"></div>
+            <div class="color morado"></div>
+          </div>
+          <div class="mis-fondos">
+            <div class="texto-mis-fondos">
+              <i class="fa fa-angle-down" aria-hidden="true"></i>
+              <nav class="mis-fondos">Mis Fondos</nav>
+            </div>
+            <div class="fotos-fondo">
+            </div>
+          </div>
+          <div class="mis-fondos">
+            <div class="texto-mis-fondos">
+              <i class="fa fa-angle-down" aria-hidden="true"></i>
+              <nav class="librería">Librería</nav>
+            </div>
+            <div class="fotos-libreria">
+            </div>
+          </div>
+          
+          
         </div>
 
 
