ajustes de galeria de fotos

--- a/index.html
+++ b/index.html
@@ -173,9 +173,18 @@
         </div>
 
         <div class="contenedor-opciones">
-          <div class="input"></div>
+          <div class="contenedor-input-color">
+          <div class="input">
+            <i class="fa fa-search" aria-hidden="true"></i>
+            <form>
+              <div>
+                <input type="search" class="Fields" placeholder=" Office Background" />
+              </div>
+            </form>
+          </div>
+
           <div class="colores">
-            <div class="negro" ></div>
+            <div class="negro"></div>
             <div class="blanco con-borda"></div>
             <div class="color azul-claro con-borda"></div>
             <div class="color verde-claro"></div>
@@ -183,12 +192,22 @@
             <div class="color anaranjado"></div>
             <div class="color morado"></div>
           </div>
+        </div>
+
+          <div class="contenedor-fotos">
           <div class="mis-fondos">
             <div class="texto-mis-fondos">
               <i class="fa fa-angle-down" aria-hidden="true"></i>
               <nav class="mis-fondos">Mis Fondos</nav>
             </div>
             <div class="fotos-fondo">
+              <img class="img" src="fotos/escenaa.jpg">
+              <img class="img" src="fotos/escenab.jpg">
+              <img class="img" src="fotos/escenac.jpg">
+              <div class="anadir-fondo">
+                <i class="fa fa-plus" aria-hidden="true"></i>
+                <div>Añadir foto</div>
+              </div>
             </div>
           </div>
           <div class="mis-fondos">
@@ -197,10 +216,20 @@
               <nav class="librería">Librería</nav>
             </div>
             <div class="fotos-libreria">
+              <img class="img" src="fotos/escenad.jpg">
+              <img class="img" src="fotos/escenae.jpg">
+              <img class="img" src="fotos/escenaf.jpg">
+              <img class="img" src="fotos/escenag.jpg">
+              <img class="img" src="fotos/escenamedio.jpg">
+              <img class="img" src="fotos/escenaa.jpg">
+              <img class="img" src="fotos/escenab.jpg">
+              <img class="img" src="fotos/escenac.jpg">
+              <img class="img" src="fotos/escenad.jpg">
+              <img class="img" src="fotos/escenae.jpg">
             </div>
           </div>
-          
-          
+        </div>
+
         </div>
 
 
