ultimos ajustes Scene Importar Sonidos

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
 
           <div class="mis-audios">
             <div class="texto-mis-audios">
-              <i class="fa fa-angle-down" aria-hidden="true"></i>
+              <i class="fa fa-angle-down" aria-hidden="true" style="font-size: 40px;"></i> &nbsp;&nbsp;
               <nav class="mis-fondos">Mis Audios</nav>
             </div>
             <div class="fondo-musical-uno">
@@ -325,7 +325,7 @@
                 style="position: relative;margin-left: 250px ; color: #5bc6f8;"></i>
             </div>
             <div class="barra-reproduccion"><img src="fotos/lineaa.jpeg"
-              style="position:relative; width: 200px; margin-left: 70px;"></div>
+                style="position:relative; width: 200px; margin-left: 70px;"></div>
             <div class="fondo-musical-dos">
               <i class="fa fa-play" aria-hidden="true"
                 style="position: relative;; font-size: 25px; color: #888888; margin-top: 20px; margin-left: 20px;"></i>
@@ -340,7 +340,7 @@
 
           <div class="subir-audios">
             <div class="texto-subir-audios">
-              <i class="fa fa-angle-down" aria-hidden="true"></i>
+              <i class="fa fa-angle-down" aria-hidden="true" style="font-size: 40px;"></i>&nbsp;&nbsp;
               <nav class="mis-fondos">Subir Audio</nav>
             </div>
             <div class="opcion-subir-audio">
