Fueron adicionadas las figuras

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
           </div>
 
         </div>
-        <div class="contenedor-opciones-figuras ocultar">
+        <div class="contenedor-opciones-figuras ">
           <div class="contenedor-input-color">
             <div class="input">&nbsp; &nbsp;
               <i class="fa fa-search" aria-hidden="true"></i> &nbsp;&nbsp;
@@ -262,12 +262,12 @@
                 <nav class="mis-fondos">Mis objetos</nav>
               </div>
               <div class="fotos-fondo">
-                <img class="figuras" src="assets/objects/ColoredLineIcons/png/128/art_palette.png">
-                <img class="figuras" src="assets/objects/ColoredLineIcons/png/128/book.png">
-                <img class="figuras" src="assets/objects/ColoredLineIcons/png/128/brush_wide.png">
-                <img class="figuras" src="assets/objects/ColoredLineIcons/png/128/image.png">
-                <img class="figuras" src="assets/objects/ColoredLineIcons/png/128/clip.png">
-                <img class="figuras" src="assets/objects/ColoredLineIcons/png/128/ruler.png">
+                <img class="figuras" src="assets/objetos/figura1.png">
+                <img class="figuras" src="assets/objetos/figura2.png">
+                <img class="figuras" src="assets/objetos/figura3.png">
+                <img class="figuras" src="assets/objetos/figura4.png">
+                <img class="figuras" src="assets/objetos/figura5.png">
+                <img class="figuras" src="assets/objetos/figura6.png">
 
                 <div class="anadir-objetos">
                   <i class="fa fa-plus" aria-hidden="true"></i>
@@ -281,35 +281,32 @@
                 <nav class="librería">Librería</nav>
               </div>
               <div class="fotos-libreria">
-                <img class="figuras" src="assets/objects/ColoredLineIcons/png/128/lightbulb_idea.png">
-                <img class="figuras" src="assets/objects/ColoredLineIcons/png/128/monitor.png">
-                <img class="figuras" src="assets/objects/ColoredLineIcons/png/128/pencil.png">
-                <img class="figuras" src="assets/objects/ColoredLineIcons/png/128/pencil_tip.png">
-                <img class="figuras" src="assets/objects/ColoredLineIcons/png/128/product.png">
-                <img class="figuras" src="assets/objects/ColoredLineIcons/png/128/ruler.png">
-                <img class="figuras" src="assets/objects/ColoredLineIcons/png/128/sunglasses.png">
-                <img class="figuras" src="assets/objects/ColoredLineIcons/png/128/tablet.png">
-                <img class="figuras" src="assets/objects/ColoredLineIcons/png/128/thumbs_down.png">
-                <img class="figuras" src="assets/objects/ColoredLineIcons/png/128/thumbs_up.png">
-                <img class="figuras" src="assets/objects/ColoredLineIcons/png/128/watermark.png">
-                <img class="figuras" src="assets/objects/ColoredLineIcons/png/128/zoom.png">
-                <img class="figuras" src="assets/objects/ColoredLineIcons/png/128/laptop.png">
-                <img class="figuras" src="assets/objects/ColoredLineIcons/png/128/image.png">
-                <img class="figuras" src="assets/objects/ColoredLineIcons/png/128/cloud.png">
-                <img class="figuras" src="assets/objects/ColoredLineIcons/png/128/graphic_design.png">
-                <img class="figuras" src="assets/objects/ColoredLineIcons/png/128/fountain_pen.png">
-                <img class="figuras" src="assets/objects/ColoredLineIcons/png/128/folder.png">
-                <img class="figuras" src="assets/objects/ColoredLineIcons/png/128/eraser.png">
-                <img class="figuras" src="assets/objects/ColoredLineIcons/png/128/dropper.png">
-                <img class="figuras" src="assets/objects/ColoredLineIcons/png/128/device.png">
-                <img class="figuras" src="assets/objects/ColoredLineIcons/png/128/coffe.png">
+                <img class="figuras" src="assets/objetos/figura7.png">
+                <img class="figuras" src="assets/objetos/figura8.png">
+                <img class="figuras" src="assets/objetos/figura9.png">
+                <img class="figuras" src="assets/objetos/figura10.png">
+                <img class="figuras" src="assets/objetos/figura11.png">
+                <img class="figuras" src="assets/objetos/figura12.png">
+                <img class="figuras" src="assets/objetos/figura13.png">
+                <img class="figuras" src="assets/objetos/figura14.png">
+                <img class="figuras" src="assets/objetos/figura15.png">
+                <img class="figuras" src="assets/objetos/figura16.png">
+                <img class="figuras" src="assets/objetos/figura17.png">
+                <img class="figuras" src="assets/objetos/figura18.png">
+                <img class="figuras" src="assets/objetos/figura19.png">
+                <img class="figuras" src="assets/objetos/figura20.png">
+                <img class="figuras" src="assets/objetos/figura21.png">
+                <img class="figuras" src="assets/objetos/figura22.png">
+                <img class="figuras" src="assets/objetos/figura23.png">
+                <img class="figuras" src="assets/objetos/figura24.png">
+            
               </div>
             </div>
           </div>
 
         </div>
 
-        <div class="contenedor-opciones-audio">
+        <div class="contenedor-opciones-audio ocultar">
 
           <div class="mis-audios">
             <div class="texto-mis-audios">
