--- a/wizard.html
+++ b/wizard.html
@@ -26,7 +26,7 @@
 
       <div class="dos">
 
-        <div class="wizard ocultar">
+        <div class="wizard">
           <div class="datos-proyecto ">
             <div class="nombre-nuevo-proyecto">
               <nav style="color: white; padding-top: 15px; font-size:30px;">¿Cuál es el nombre de tu proyecto?</nav>
@@ -63,23 +63,23 @@
 
         </div>
 
-        <div class="keywords">
+        <div class="keywords  ocultar">
 
           <div class="opcion-anade-keywords">
             <nav>Añade Keywords</nav>
           </div>
 
           <div class="opciones-keywords">
-            <div class="opcion-puntos">
-              <nav style="margin-left: 45px;">...</nav>
-              <i style="margin-left: 80px;" class="fa fa-pencil" aria-hidden="true"></i>
+            <div >
+              <span >...</span>
+              <i class="fa fa-pencil" aria-hidden="true"></i>
             </div>
-            <div class="opcion-negocios">
-              <nav>Negocios</nav>
+            <div>
+              <span>Negocios</span>
               <i class="fa fa-times" aria-hidden="true"></i>
             </div>
-            <div class="opcion-start-up">
-              <nav>Sart Up</nav>
+            <div>
+              <span>Sart Up</span>
               <i class="fa fa-times" aria-hidden="true"></i>
             </div>
   
